# webrtc-p2p-connection-tester

./: .env  .env.local.example  .gitignore  Cargo.toml  LICENSE  README copy.md  README.md  docker-compose.yml
config/: webrtc-connection-tester-greengrass-recipe.yaml
docker/: Dockerfile
docs/: ARCHITECTURE.md  DATA_FLOW.md  ICE_TROUBLESHOOTING.md  local-sfu-workflow.md
scripts/: upload_to_s3.sh
src/: camera_manager.rs  lib.rs  main.rs  runtime.rs  test_auth.rs  viewer_agent.rs
src/app/: bootstrap.rs  mod.rs  runtime.rs  shutdown.rs
src/auth/: jwt.rs  mod.rs
src/clients/: signaling.rs
src/config/: mod.rs
src/events/: event.rs
src/messaging/: mod.rs  signaling_socketio_client.rs
src/metrics/: mod.rs  provider.rs
src/monitoring/: mod.rs  performance_monitor.rs
src/pipeline/: bus.rs  caps.rs  mod.rs  webrtc.rs
src/sinks/: mod.rs
src/sources/: zeromq.rs
src/state/: app_state.rs  mod.rs  state_manager.rs
src/tester/: connection_monitor.rs  mod.rs  network_probe.rs  report.rs
src/utils/: config.rs  logging.rs  mod.rs
ui/: app.js  lk_player.html  local-live-tester.html
