[package]
name = "webrtc-connection-tester"
version = "0.1.0"
edition = "2021"

# Define binary targets
[[bin]]
name = "webrtc-connection-tester"
path = "src/main.rs"

[[bin]]
name = "test-auth"
path = "src/test_auth.rs"

# Headless viewer agent: closes the end-to-end test loop by connecting as a
# viewer, decoding the stream, and reporting decode telemetry to the gateway.
[[bin]]
name = "webrtc-viewer-agent"
path = "src/viewer_agent.rs"

#[[bin]]
#name = "webrtc-producer"
#path = "src/webrtc_producer.rs"

[dependencies]
# GStreamer bindings (link against system libs via pkg-config; Debian packages:
# libgstreamer1.0-dev, libgstreamer-plugins-base1.0-dev, libgstreamer-plugins-bad1.0-dev)
gstreamer = "0.20"
gstreamer-webrtc = "0.20"
gstreamer-sdp = "0.20"
gstreamer-video = "0.20"
gstreamer-app = "0.20"

# Socket.IO and WebSocket
tokio = { version = "1", features = ["full"] }
rust_socketio = { version = "0.4", features = ["async"] }
futures-util = "0.3"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

url = "2.4"

# Other utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.3.0", features = ["v4"] }
dashmap = "5.4.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
zmq = "0.10"
regex = "1.8"
once_cell = "1.8"
env_logger = "0.10"
log = "0.4"
jsonwebtoken = "9"

# TURN long-term-credential MESSAGE-INTEGRITY (HMAC-SHA1 over MD5 key)
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
config = { version = "0.14", features = ["toml"] }


# System monitoring
sysinfo = "0.28"

# HTTP client for signaling probe
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }


